styles/globals.scss
@import './globalStyles.scss';
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  scroll-behavior: smooth;
}

h2 {
  margin: 0; //
  padding-top: 10px;
  padding-bottom: 10px;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background-color: $primary-color;
}
 
::-webkit-scrollbar-thumb {
  background: $secondary-color; 
}

::-webkit-scrollbar-thumb:hover {
  background: $secondary-light; 
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
}

